# ChouetteBot-discord

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bot.py  commands.py  commands_list.py  docker-compose.yaml.example  latex_render.py  main.py  main_bot.py  pyproject.toml  requirements-dev.txt  requirements.txt  responses.py  tasks.py
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug.yaml  feature_request.yaml
.github/workflows/: docker-image.yaml  docker-image.yml  python-app.yml  ruff.yaml
chouette/: __main__.py  bot.py  commands_list.py  responses.py  tasks.py
chouette/commands/: admin.py  birthdays.py  misc.py  skyblock.py
chouette/utils/: birthdays.py  data_io.py  github_api.py  hypixel_data.py  latex_render.py  ranking.py  skyblock.py  skyblock_guild.py  version.py
commands/: admin.py  birthdays.py  misc.py  role_menu.py  skyblock.py  utils.py
networth/: Dockerfile  go.mod  go.sum  main.go  test.py
src/: latex_render.py  skyblock_guild.py
utils/: birthdays.py  github_api.py  latex_render.py  skyblock_guild.py  version.py
