[project]
name = "ChouetteBot"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RET", "SIM", "RUF", "T20", "ERA", "ASYNC"]
ignore = ["E501"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
